tests/golden/defaults/thanos/thanos/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: syn-thanos
  name: syn-thanos
