tests/golden/defaults/thanos/thanos/51_auth-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: thanos-auth
  name: thanos-auth
spec:
  ports:
    - name: proxy
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/component: query-layer
    app.kubernetes.io/instance: thanos-query
    app.kubernetes.io/name: thanos-query
    app.kubernetes.io/version: v0.18.0
  type: ClusterIP
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  annotations: {}
  labels:
    name: thanos-auth
  name: thanos-auth
rules:
  - apiGroups:
      - authentication.k8s.io
    resources:
      - tokenreviews
    verbs:
      - create
  - apiGroups:
      - authorization.k8s.io
    resources:
      - subjectaccessreviews
    verbs:
      - create
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  annotations: {}
  labels:
    name: thanos-auth
  name: thanos-auth
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: thanos-auth
subjects:
  - kind: ServiceAccount
    name: thanos-query
    namespace: syn-thanos
